<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gif2"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category_fragment_add_category"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@android:color/white" />

        <AutoCompleteTextView
            android:id="@+id/gif_category_Add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/category_fragment_edittext_hint"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <Button
            android:id="@+id/button_category_Add"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/testpadd"
            android:padding="10dp"
            android:text="@string/category_fragment_add_category_buttton_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="or"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@android:color/white" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@android:color/white" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category_fragment_pick_category"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@android:color/white" />

        <ListView
            android:id="@+id/category_listview"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:choiceMode="singleChoice"
            android:listSelector="#666666" />
        <!-- Last 2 attributes used to select item -->


        <Button
            android:id="@+id/set_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Set" />

    </LinearLayout>


</ScrollView>